<resources>
    <string name="app_name">Earthquake Occurrences</string>
    <string name="developer_name">Akshat Patel</string>
    <string name="earthquake_parameters">Earthquake Parameters</string>
    <string name="num_of_earthquakes"># of earthquakes to display:</string>
    <string name="submit">Submit</string>
    <string name="order">Order By:</string>
    <string name="start_date">Select Start Date:</string>
    <string name="minimum_magnitude">Minimum Magnitude:</string>
</resources>
